--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -26,5 +26,7 @@
     "test/**/__snapshots__": true,
     "package-lock.json": true,
     "*.{css,sass,scss}.d.ts": true
-  }
+  },
+  "files.eol": "\n",
+  "editor.tabSize": 2
 }
