--- a/package.json
+++ b/package.json
@@ -113,8 +113,7 @@
     "electron-updater": "^5.0.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
-    "react-router-dom": "^6.3.0",
-    "win32-api": "^9.6.0"
+    "react-router-dom": "^6.3.0"
   },
   "devDependencies": {
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.6",
