Fix jat-52 for prod

--- a/package.json
+++ b/package.json
@@ -240,7 +240,14 @@
       "output": "release/build"
     },
     "extraResources": [
-      "./assets/**"
+      "./assets/**",
+      {
+        "from": "node_modules/regedit/vbs",
+        "to": "vbs",
+        "filter": [
+          "**/*"
+        ]
+      }
     ],
     "publish": {
       "provider": "github",
