--- a/release/app/package.json
+++ b/release/app/package.json
@@ -1,12 +1,10 @@
 {
-  "name": "electron-react-boilerplate",
-  "version": "4.6.0",
-  "description": "A foundation for scalable desktop apps",
+  "name": "aqua",
+  "version": "0.0.0",
+  "description": "An audio equalizer app",
   "license": "MIT",
   "author": {
-    "name": "Electron React Boilerplate Maintainers",
-    "email": "electronreactboilerplate@gmail.com",
-    "url": "https://github.com/electron-react-boilerplate"
+    "name": "JATY"
   },
   "main": "./dist/main/main.js",
   "scripts": {
