--- a/package.json
+++ b/package.json
@@ -94,7 +94,10 @@
     ],
     "transform": {
       "\\.(ts|tsx|js|jsx)$": "ts-jest"
-    }
+    },
+    "testMatch": [
+      "**/__tests__/*_tests/*.ts?(x)"
+    ]
   },
   "dependencies": {
     "electron-debug": "^3.2.0",
@@ -129,7 +132,6 @@
     "detect-port": "^1.3.0",
     "electron": "^18.2.3",
     "electron-builder": "^23.0.3",
-    "electron-chromedriver": "^19.0.0",
     "electron-devtools-installer": "^3.2.0",
     "electron-notarize": "^1.2.1",
     "electron-rebuild": "^3.2.7",
@@ -151,6 +153,7 @@
     "husky": "^8.0.1",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^28.1.0",
+    "jest-cucumber": "^3.0.1",
     "jest-environment-jsdom": "^28.1.0",
     "lint-staged": "^12.4.1",
     "mini-css-extract-plugin": "^2.6.0",
@@ -161,7 +164,6 @@
     "rimraf": "^3.0.2",
     "sass": "^1.51.0",
     "sass-loader": "^12.6.0",
-    "selenium-webdriver": "^4.2.0",
     "style-loader": "^3.3.1",
     "terser-webpack-plugin": "^5.3.1",
     "ts-jest": "^28.0.2",
@@ -169,6 +171,7 @@
     "ts-node": "^10.7.0",
     "typescript": "^4.6.4",
     "url-loader": "^4.1.1",
+    "webdriverio": "^7.20.2",
     "webpack": "^5.72.1",
     "webpack-bundle-analyzer": "^4.5.0",
     "webpack-cli": "^4.9.2",
