--- a/package.json
+++ b/package.json
@@ -100,10 +100,12 @@
     "testMatch": [
       "**/__tests__/*_tests/*.ts?(x)"
     ],
-    "transformIgnorePatterns": ["/node_modules/(?!(uuid)/)", "\\.pnp\\.[^\\\/]+$"]
+    "transformIgnorePatterns": [
+      "/node_modules/(?!(uuid)/)",
+      "\\.pnp\\.[^\\/]+$"
+    ]
   },
   "dependencies": {
-    "electron-chromedriver": "^19.0.0",
     "electron-debug": "^3.2.0",
     "electron-log": "^4.4.7",
     "electron-updater": "^5.0.1",
@@ -136,6 +138,7 @@
     "detect-port": "^1.3.0",
     "electron": "^18.2.3",
     "electron-builder": "^23.0.3",
+    "electron-chromedriver": "^19.0.0",
     "electron-devtools-installer": "^3.2.0",
     "electron-notarize": "^1.2.1",
     "electron-rebuild": "^3.2.7",
