--- a/package.json
+++ b/package.json
@@ -106,6 +106,7 @@
     ]
   },
   "dependencies": {
+    "d3": "^7.6.1",
     "electron-debug": "^3.2.0",
     "electron-log": "^4.4.7",
     "electron-updater": "^5.0.1",
@@ -120,6 +121,7 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^14.2.1",
+    "@types/d3": "^7.4.0",
     "@types/jest": "^27.5.1",
     "@types/node": "17.0.33",
     "@types/react": "^18.0.9",
