--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "start:renderer": "cross-env NODE_ENV=development TS_NODE_TRANSPILE_ONLY=true webpack serve --config ./.erb/configs/webpack.config.renderer.dev.ts",
     "test": "jest",
     "test:unit": "jest --testMatch **/__tests__/unit_tests/*.ts?(x)",
-    "test:cucumber": "jest --testMatch **/__tests__/cucumber_tests/*.ts?(x)"
+    "test:cucumber": "jest --testMatch **/__tests__/cucumber_tests/*.ts?(x) --runInBand"
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx}": [
