Rename icon files, remove pass filters, update constants

--- a/package.json
+++ b/package.json
@@ -253,12 +253,9 @@
     ],
     "publish": {
       "provider": "github",
-      "owner": "electron-react-boilerplate",
-      "repo": "electron-react-boilerplate"
+      "owner": "hemit-s",
+      "repo": "AQUA"
     }
-  },
-  "collective": {
-    "url": "https://opencollective.com/electron-react-boilerplate-594"
   },
   "devEngines": {
     "node": ">=14.x",
