Disabled launch after install. Remove menu in prod

--- a/package.json
+++ b/package.json
@@ -225,10 +225,8 @@
         }
       ]
     },
-    "win": {
-      "target": [
-        "nsis"
-      ]
+    "nsis": {
+      "runAfterFinish": false
     },
     "linux": {
       "target": [
