Fix d3 export syntax error in jest

--- a/package.json
+++ b/package.json
@@ -82,7 +82,8 @@
     ],
     "moduleNameMapper": {
       "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/.erb/mocks/fileMock.js",
-      "\\.(css|less|sass|scss)$": "identity-obj-proxy"
+      "\\.(css|less|sass|scss)$": "identity-obj-proxy",
+      "d3": "<rootDir>/node_modules/d3/dist/d3.min.js"
     },
     "setupFiles": [
       "./.erb/scripts/check-build-exists.ts"
