--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "start:preload": "cross-env NODE_ENV=development TS_NODE_TRANSPILE_ONLY=true webpack --config ./.erb/configs/webpack.config.preload.dev.ts",
     "start:renderer": "cross-env NODE_ENV=development TS_NODE_TRANSPILE_ONLY=true webpack serve --config ./.erb/configs/webpack.config.renderer.dev.ts",
     "test": "jest",
-    "test:unit": "jest --testMatch **/__tests__/unit_tests/*.ts?(x)",
+    "test:unit": "jest --testMatch **/__tests__/unit_tests/**/*.ts?(x)",
     "test:cucumber": "jest --testMatch **/__tests__/cucumber_tests/*.ts?(x) --runInBand"
   },
   "lint-staged": {
@@ -99,7 +99,7 @@
       "\\.(ts|tsx|js|jsx)$": "ts-jest"
     },
     "testMatch": [
-      "**/__tests__/*_tests/*.ts?(x)"
+      "**/__tests__/*_tests/**/*.ts?(x)"
     ],
     "transformIgnorePatterns": [
       "/node_modules/(?!(uuid)/)",
