Setup autoeq folders and hook UI with backend

--- a/package.json
+++ b/package.json
@@ -251,7 +251,8 @@
         "filter": [
           "**/*"
         ]
-      }
+      },
+      "./auto_eq/**"
     ],
     "publish": {
       "provider": "github",
