--- a/package.json
+++ b/package.json
@@ -107,6 +107,7 @@
     ]
   },
   "dependencies": {
+    "ajv": "^8.12.0",
     "d3": "^7.6.1",
     "electron-debug": "^3.2.0",
     "electron-log": "^4.4.7",
