--- a/release/app/package.json
+++ b/release/app/package.json
@@ -1,8 +1,8 @@
 {
   "name": "aqua",
-  "version": "1.1.0",
+  "version": "1.1.1",
   "description": "An audio equalizer app",
-  "license": "MIT",
+  "license": "GPLv3",
   "author": {
     "name": "JATY"
   },
